# crashlab

./: ert.pgm  wer.pgm
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/navi/lib/navi/: bt_main  goal_publisher
install/navi/share/navi/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/pid_control/lib/pid_control/: human_following  motor_node  publisher  subscriber  teleop_node
install/pid_control/share/pid_control/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/pwm_control/lib/pwm_control/: motor_node  teleop_node
install/pwm_control/share/pwm_control/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/simya_description/share/simya_description/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/ydlidar_ros2_driver/lib/ydlidar_ros2_driver/: ydlidar_ros2_driver_client  ydlidar_ros2_driver_node
install/ydlidar_ros2_driver/share/ydlidar_ros2_driver/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
log/: latest_build
src/imu_pub/: CMakeLists.txt  package.xml
src/imu_pub/launch/: imu_node.launch.py
src/imu_pub/mw/: mw_ahrs.cpp
src/navi/: CMakeLists.txt
src/navi/behavior_tree/: goal.xml
src/navi/include/simya_bt/: Isgoal.hpp  cleargoalpose.hpp  goalcheckerpub.hpp  goalposeCheck.hpp  goaltrigger.hpp  humanfollowing.hpp  nav2_client.hpp
src/navi/launch/: behavior.launch.py  navigation2.launch.py  navigation2_rviz.launch.py  publishernode.launch.py  publishernode2.launch.py  re_launch.py
src/navi/map/: ert.yaml  map1.pgm  map1.yaml  rty.pgm  rty.yaml  wer.yaml
src/navi/param/: simya.yaml
src/navi/src/: bt_main.cpp  goal_publisher.cpp
src/simya_description/: CMakeLists.txt
src/simya_description/launch/: robot.launch.py  robot_description_launch.py
src/simya_description/meshes/: wheel_L.STL  wheel_R.STL
src/simya_description/rviz/: rviz.rviz
src/simya_description/urdf/: robot.urdf
(+81 files in other folders)
